--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -16,11 +16,17 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/underscore/underscore-min.js"></script>
 
+    <!-- signature pad -->
+    <script src='lib/signature_pad/signature_pad.js'></script>
+
     <!-- cordova script (this will be a 404 during development) -->
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="cordova.js"></script>
 
+    <script type="text/javascript" src="lib/jspdf/dist/jspdf.debug.js"></script>
+
     <!-- your app's js -->
-    <script src="app/app.js"></script>    
+    <script src="app/app.js"></script>
     <script src="app/config.js"></script>
     <script src="app/common/services.js"></script>
     <script src="app/main/main.js"></script>
