--- a/ionic/www/app/entry-view/contact-view.html
+++ b/ionic/www/app/entry-view/contact-view.html
@@ -2,7 +2,7 @@
 
     <ion-nav-buttons side="right">
         <a class="button button-icon icon ion-ios-trash" href="javascript:;" ng-click="delete(_soupEntryId)"></a>
-        <a class="button button-icon icon ion-ios-compose" href="#/app/{{entryName}}-upsert/{{entry._soupEntryId}}"></a>        
+        <a class="button button-icon icon ion-ios-compose" href="#/app/{{entryName}}-upsert/{{entry._soupEntryId}}"></a> -->
     </ion-nav-buttons>
 
     <ion-content class="has-header">
@@ -18,7 +18,7 @@
             <div class="item">
                 <h2>Title</h2>
                 <p>{{entry.Title}}</p>
-            </div>       
+            </div>
             <a class="item item-icon-left" href="javascript:;">
                 <i class="icon ion-ios-telephone"></i>Mobile phone<p>{{entry.Phone}}</p>
             </a>
@@ -31,7 +31,7 @@
             </div>
             <a class="item item-icon-left" href="tel:javascript:;">
                 <i class="icon ion-ios-telephone"></i>Home phone<p>{{entry.HomePhone}}</p>
-            </a>            
+            </a>
         </div>
     </ion-content>
 </ion-view>
